# canopy

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  coverage.json  deny.toml  deny.toml.backup  justfile  lcov.info  tarpaulin-report.json  test_layer1_latency.rs  test_udpipe_real.rs
crates/canopy-cli/: Cargo.toml
crates/canopy-cli/src/: lib.rs  main.rs  main_tests.rs
crates/canopy-cli/tests/: main_basic_tests.rs  main_integration_test.rs  main_tests.rs
crates/canopy-core/: Cargo.toml
crates/canopy-core/src/: coverage_boost_tests.rs  coverage_improvement_tests.rs  layer1parser.rs  lib.rs  paths.rs  performance_tests.rs  serialization_tests.rs  treebank_loader.rs  utility_coverage_tests.rs
crates/canopy-core/tests/: layer1parser_comprehensive_tests.rs  lib_coverage_boost.rs
crates/canopy-engine/: Cargo.toml
crates/canopy-engine/src/: base_engine.rs  cache.rs  conllu.rs  data_loader.rs  error.rs  lemma_cache.rs  lib.rs  parallel.rs  stats.rs  traits.rs  xml_parser.rs
crates/canopy-engine/tests/: cache_comprehensive_tests.rs  error_comprehensive_tests.rs  error_handling_tests.rs  lib_complete_coverage.rs  parallel_comprehensive_tests.rs  stats_comprehensive_tests.rs  xml_parser_comprehensive_tests.rs
crates/canopy-events/: Cargo.toml
crates/canopy-events/src/: binding.rs  composer.rs  confidence.rs  config.rs  decomposition.rs  error.rs  lib.rs  sentence_builder.rs  types.rs
crates/canopy-events/tests/: integration_test.rs
crates/canopy-framenet/: Cargo.toml
crates/canopy-framenet/src/: engine.rs  lib.rs  parser.rs  types.rs
crates/canopy-framenet/tests/: engine_coverage_tests.rs  engine_methods_tests.rs  framenet_comprehensive_tests.rs  integration_test.rs  parser_comprehensive_edge_cases.rs  parser_comprehensive_tests.rs  parser_coverage_tests.rs  parser_error_and_complex_xml_tests.rs  parser_extended_coverage_tests.rs
crates/canopy-lexicon/: Cargo.toml
crates/canopy-lexicon/src/: engine.rs  lib.rs  parser.rs  types.rs
crates/canopy-lexicon/tests/: database_coverage_tests.rs  engine_loaded_tests.rs  engine_methods_tests.rs  engine_tests.rs  parser_comprehensive_tests.rs  parser_coverage_tests.rs  parser_tests.rs  types_comprehensive_tests.rs
crates/canopy-lsp/: Cargo.toml
crates/canopy-lsp/src/: coverage_final_push.rs  diagnostics.rs  diagnostics_tests.rs  error_handling_tests.rs  handlers.rs  lib.rs  lsp_backend.rs  lsp_backend_tests.rs  lsp_main_coverage_tests.rs  main.rs  main_tests.rs  quick_coverage_boost.rs  server.rs  verbnet_test.rs
crates/canopy-lsp/tests/: handlers_coverage_tests.rs  main_basic_tests.rs  main_integration_tests.rs  modules_coverage.rs
crates/canopy-parser/: Cargo.toml  build.rs  english-partut-ud-2.12-230717.udpipe  udpipe_wrapper.cpp  udpipe_wrapper.h
crates/canopy-parser/benches/: corpus_benchmark.rs  parsing_pipeline.rs
crates/canopy-parser/src/: benchmarks.rs  coverage_improvement_tests.rs  evaluation.rs  golden_tests.rs  layer1.rs  layer1_latency_test.rs  lib.rs  lib_coverage_tests.rs  memory.rs  metrics.rs  pipeline.rs  quick_coverage_tests.rs  simple_coverage_tests.rs
crates/canopy-pipeline/: Cargo.toml
crates/canopy-pipeline/examples/: debug_layer1_analysis.rs.disabled  debug_unified_roles.rs.obsolete  detailed_semantic_debug_demo.rs.disabled  event_composition_demo.rs  l1_analyzer_demo.rs.disabled  layer1_real_data_demo.rs.disabled  moby_dick_layer1_analysis.rs.disabled  moby_dick_unified_roles.rs.obsolete  performance_integration_test.rs.disabled  single_word_debug.rs.disabled
crates/canopy-pipeline/src/: api.rs  benchmarks.rs  config.rs  container.rs  error.rs  implementations.rs  lib.rs  models.rs  pipeline.rs  real_benchmarks.rs  real_implementations.rs  traits.rs  traits_coverage_tests.rs
crates/canopy-pipeline/tests/: api_basic_tests.rs  api_coverage.rs  benchmarks_basic_tests.rs  config_basic_tests.rs  container_basic_tests.rs  container_comprehensive_tests.rs  container_dependency_injection_tests.rs  lib_exports_coverage.rs  pipeline_comprehensive_tests.rs  pipeline_execution_tests.rs  traits_basic_coverage.rs  traits_basic_tests.rs
crates/canopy-propbank/: Cargo.toml
crates/canopy-propbank/examples/: propbank_demo.rs
crates/canopy-propbank/src/: config.rs  engine.rs  lib.rs  parser.rs  types.rs
crates/canopy-propbank/tests/: integration_test.rs
crates/canopy-semantic-layer/: Cargo.toml
crates/canopy-semantic-layer/benches/: semantic_analysis.rs.disabled
crates/canopy-semantic-layer/examples/: concise_engine_demo.rs  corpus_perf_demo.rs  data_loading_demo.rs  detailed_engine_data_demo.rs.disabled  engine_timing_analysis.rs.disabled  fast_performance_demo.rs.disabled  framenet_parallel_test.rs.disabled  lemmatization_benchmark.rs.disabled  moby_dick_demo.rs.disabled  performance_benchmark.rs.disabled  pipeline_performance_test.rs.disabled  progress_demo.rs  quick_performance_test.rs.disabled  real_engine_test.rs.disabled  real_vs_stub_comparison.rs.disabled  semantic_layer1_demo.rs  smart_caching_demo.rs.disabled  stub_analysis.rs.disabled
crates/canopy-semantic-layer/src/: composition.rs  coordinator.rs  coordinator.rs.bak  coordinator.rs.original  engines.rs  gpu.rs  integration.rs  lemmatizer.rs  lib.rs  test_fixtures.rs  tokenization.rs  wordnet.rs
crates/canopy-semantic-layer/tests/: engine_coordination_comprehensive_tests.rs  engines_simple_tests.rs  integration_tests.rs  lemmatization_integration_tests.rs  lib_comprehensive_tests.rs  lib_quick_coverage.rs  semantic_analyzer_comprehensive_tests.rs  semantic_api_comprehensive_tests.rs  semantic_layer1_tests.rs
crates/canopy-semantics/: Cargo.toml
crates/canopy-semantics/benches/: verbnet_lookup.rs
crates/canopy-semantics/examples/: benchmark_demo.rs
crates/canopy-semantics/src/: coverage_improvement_tests.rs  error_handling_tests.rs  layer2.rs  lib.rs  performance_benchmarks.rs  (+1 more)
crates/canopy-tokenizer/: Cargo.toml
crates/canopy-treebank/: Cargo.toml
crates/canopy-verbnet/: Cargo.toml
crates/canopy-wordnet/: Cargo.toml
(+15390 files in other folders)
