[workspace]
members = [
    "crates/canopy-core",
    "crates/canopy-parser",
    "crates/canopy-semantics",
    "crates/canopy-lsp",
    "crates/canopy-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["canopy contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/canopy"
description = "High-performance linguistic analysis LSP server in Rust"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# LSP and async
tower-lsp = "0.20"
tower = "0.4"

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
insta = "1.34"

# Development tools
cargo-watch = "8.4"
cargo-tarpaulin = "0.27"

# Linguistic processing
# TODO: UDPipe bindings (will be added in M2)

[package]
name = "canopy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
canopy-core = { path = "crates/canopy-core" }
canopy-parser = { path = "crates/canopy-parser" }
canopy-semantics = { path = "crates/canopy-semantics" }
canopy-lsp = { path = "crates/canopy-lsp" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "baseline"
harness = false
