[workspace]
members = [
    "crates/canopy-core",
    "crates/canopy-engine",         # Base engine infrastructure
    "crates/canopy-verbnet",        # VerbNet semantic analysis
    "crates/canopy-framenet",       # FrameNet semantic analysis
    "crates/canopy-semantic-layer", # Semantic-first Layer 1 with consolidated engines
    # "crates/canopy-parser",       # DEPRECATED: Legacy UDPipe replaced by semantic-layer
    # "crates/canopy-semantics",    # DEPRECATED: Replaced by canopy-semantic-layer
    "crates/canopy-pipeline",     # Re-enabled with new semantic coordinator integration
    "crates/canopy-lsp",
    "crates/canopy-cli", "crates/canopy-wordnet", "crates/canopy-lexicon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["canopy contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/canopy"
description = "High-performance linguistic analysis LSP server in Rust"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# LSP and async
tower-lsp = "0.20"
tower = "0.4"

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
insta = "1.34"

# Development tools
cargo-watch = "8.4"
cargo-tarpaulin = "0.27"

# Linguistic processing
# TODO: UDPipe bindings (will be added in M2)

[package]
name = "canopy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
canopy-core = { path = "crates/canopy-core" }
canopy-semantic-layer = { path = "crates/canopy-semantic-layer" } # Modern semantic-first architecture
canopy-lsp = { path = "crates/canopy-lsp" }
canopy-verbnet = { path = "crates/canopy-verbnet" }
canopy-framenet = { path = "crates/canopy-framenet" }
tokio = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "baseline"
harness = false

[[example]]
name = "basic_demo"
path = "examples/basic_demo.rs"


