[workspace]
members = [
    "crates/canopy-core",
    "crates/canopy-engine",         # Base engine infrastructure
    "crates/canopy-verbnet",        # VerbNet semantic analysis
    "crates/canopy-framenet",       # FrameNet semantic analysis
    "crates/canopy-propbank",       # PropBank semantic role labeling
    "crates/canopy-treebank",       # UD Treebank dependency pattern analysis
    "crates/canopy-tokenizer",      # Semantic tokenization with consolidated engines
    "crates/canopy-events",         # Layer 2 event composition
    "crates/canopy-pipeline",       # Pipeline with semantic coordinator integration
    "crates/canopy-cli",
    "crates/canopy-wordnet",
    "crates/canopy-lexicon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["canopy contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/canopy"
description = "High-performance semantic linguistic analysis library in Rust"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
insta = "1.34"

# Development tools
cargo-watch = "8.4"
cargo-tarpaulin = "0.27"

# Linguistic processing
# TODO: UDPipe bindings (will be added in M2)

[package]
name = "canopy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
canopy-core = { path = "crates/canopy-core" }
canopy-engine = { path = "crates/canopy-engine" }
canopy-tokenizer = { path = "crates/canopy-tokenizer" }
canopy-treebank = { path = "crates/canopy-treebank" }
canopy-verbnet = { path = "crates/canopy-verbnet" }
canopy-framenet = { path = "crates/canopy-framenet" }
canopy-propbank = { path = "crates/canopy-propbank" }
canopy-wordnet = { path = "crates/canopy-wordnet" }
canopy-lexicon = { path = "crates/canopy-lexicon" }
canopy-events = { path = "crates/canopy-events" }
tokio = { workspace = true }
tempfile = "3.0"
rand = "0.8"
rayon = { version = "1.10", optional = true }

[features]
default = ["parallel"]
parallel = [
    "rayon",
    "canopy-engine/parallel",
    "canopy-tokenizer/parallel",
    "canopy-wordnet/parallel",
    "canopy-framenet/parallel",
    "canopy-lexicon/parallel",
]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "baseline"
harness = false

[[example]]
name = "basic_demo"
path = "examples/basic_demo.rs"

[[example]]
name = "comprehensive_semantic_demo"
path = "examples/comprehensive_semantic_demo.rs"
