[package]
name = "canopy-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for canopy"

[[bin]]
name = "canopy"
path = "src/main.rs"

[dependencies]
canopy-core = { path = "../canopy-core" }
canopy-parser = { path = "../canopy-parser" }
canopy-semantics = { path = "../canopy-semantics" }
canopy-lsp = { path = "../canopy-lsp" }
tokio = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
