[package]
name = "canopy-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core linguistic types and data structures for canopy"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = "0.5"
insta = { workspace = true }
serde_json = { workspace = true }
