[package]
name = "canopy-engine"
version = "0.1.0"
edition = "2021"
authors = ["canopy.rs contributors"]
description = "Base engine infrastructure for semantic analysis - common traits, caching, and utilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/canopy-rs/canopy"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
indexmap = "2.0"
lru = "0.12"
regex = "1.10"
rayon = { version = "1.7", optional = true }
quick-xml = "0.31"

# Core types from canopy-core
canopy-core = { path = "../canopy-core" }

[features]
default = ["std", "parallel"]
std = []
parallel = ["rayon"]

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.0"

# [[bench]]
# name = "engine_performance"
# harness = false
