[package]
name = "canopy-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for canopy"

[dependencies]
canopy-core = { path = "../canopy-core" }
canopy-semantic-layer = { path = "../canopy-semantic-layer" }
canopy-verbnet = { path = "../canopy-verbnet" }
canopy-engine = { path = "../canopy-engine" }
tokio = { workspace = true }
tower-lsp = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
