[package]
name = "canopy-pipeline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Central pipeline orchestration for Canopy linguistic analysis"

[dependencies]
canopy-core = { path = "../canopy-core" }
canopy-parser = { path = "../canopy-parser" }
canopy-semantics = { path = "../canopy-semantics" }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
tracing-subscriber = { workspace = true }

[features]
default = []
async = ["tokio"]
python-bindings = []
lsp-integration = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
