[package]
name = "canopy-propbank"
version = "0.1.0"
edition = "2021"
description = "PropBank semantic role labeling engine for Canopy"
authors = ["Canopy Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/canopy/canopy"

[dependencies]
canopy-core = { path = "../canopy-core" }
canopy-engine = { path = "../canopy-engine" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
tracing = "0.1"
thiserror = "1.0"
regex = "1.0"

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "propbank_demo"
path = "examples/propbank_demo.rs"

[features]
default = []
parallel = []
