[package]
name = "canopy-semantics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Semantic analysis and event structures for canopy"

[dependencies]
canopy-core = { path = "../canopy-core" }
canopy-parser = { path = "../canopy-parser" }
serde = { workspace = true, features = ["derive"] }
quick-xml = { version = "0.36", features = ["serialize"] }
thiserror = { workspace = true }
tracing = { workspace = true }
indexmap = "2.0"  # Preserves insertion order for deterministic behavior

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
test-log = "0.2"
tracing-subscriber = "0.3"

[[bench]]
name = "verbnet_lookup"
harness = false
