[package]
name = "canopy-treebank"
version = "0.1.0"
edition = "2021"
authors = ["canopy.rs contributors"]
description = "UD Treebank integration for dependency pattern analysis - CoNLL-U parsing with semantic signature matching"
license = "MIT OR Apache-2.0"
repository = "https://github.com/canopy-rs/canopy"

[dependencies]
# Engine infrastructure
canopy-engine = { path = "../canopy-engine" }
canopy-core = { path = "../canopy-core" }
canopy-verbnet = { path = "../canopy-verbnet" }
canopy-framenet = { path = "../canopy-framenet" }
canopy-tokenizer = { path = "../canopy-tokenizer" }

# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CoNLL-U parsing
conllu = "0.4"

# Collections and utilities
indexmap = "2.0"
lru = "0.12"
regex = "1.10"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Hashing for semantic signatures
ahash = "0.8"

# Date/time for index metadata
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing infrastructure
tokio-test = "0.4"
tempfile = "3.0"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["std"]
std = []
