[package]
name = "canopy-verbnet"
version = "0.1.0"
edition = "2021"
authors = ["canopy.rs contributors"]
description = "VerbNet integration for semantic analysis - VerbNet 3.4 XML parsing and verb class analysis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/canopy-rs/canopy"

[dependencies]
# Engine infrastructure
canopy-engine = { path = "../canopy-engine" }
canopy-core = { path = "../canopy-core" }

# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# XML parsing
quick-xml = "0.31"

# Error handling
thiserror = "1.0"

# Collections and utilities
indexmap = { version = "2.0", features = ["serde"] }
regex = "1.10"
once_cell = "1.19"

# Logging
tracing = "0.1"

[dev-dependencies]
# Testing infrastructure
tokio-test = "0.4"
tempfile = "3.0"
once_cell = "1.19"

[features]
default = ["std"]
std = []
